--- a/template/template.in
+++ b/template/template.in
@@ -40,9 +40,13 @@
 
         <div class="tab-content">
             <div class="tab-pane active" id="tabList">
-            @content
+                <div class="ListHeaderSection">
+                    @header
+                </div>
+                <div class="ListContentSection">
+                    @content
+                </div>
             </div>
-
         </div>
     </div>
 </body>
