--- a/template/template.in
+++ b/template/template.in
@@ -19,10 +19,7 @@
             <div class="navbar-inner">
                 <h1>@title</h1>
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#tabList" data-toggle="tab">@listname</a></li>
-                    <li><a href="#tabChecklists" data-toggle="tab">Checklists</a></li>
-                    <li><a href="#tabInformation" data-toggle="tab">Information</a></li>
-                    <li><a href="#tabHelp" data-toggle="tab">Help</a></li>
+                    @tabs
                 </ul>
                 <div class="profile" style="float: right;">
                     <a href="#" onclick="ClearAll()">Clear All</a>
@@ -30,23 +27,8 @@
                 </div>
             </div>
         </div>
-
-
-        <div id="intro">
-
-            <p>@long_desc</p>
-            <p><em>@long_desc_subtitle</em></p>
-        </div>
-
         <div class="tab-content">
-            <div class="tab-pane active" id="tabList">
-                <div class="ListHeaderSection">
-                    @header
-                </div>
-                <div class="ListContentSection">
-                    @content
-                </div>
-            </div>
+            @tab_section
         </div>
     </div>
 </body>
