- Now uses a config file instead of putting all the config information in the generate file. This makes it easier to link in new games etc when generating - Removed some .swn files used by vim - Added the ability for the template file to display the description - it was originally only in the meta tags

--- a/template/template.in
+++ b/template/template.in
@@ -18,6 +18,7 @@
         <div class="navbar">
             <div class="navbar-inner">
                 <h1>@title</h1>
+                <p>@desc</p>
                 <ul class="nav nav-tabs">
                     @tabs
                 </ul>
